// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. inline image (landscape) with caption and credits 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "nowrap",
      "paddingBottom": 25,
      "paddingLeft": 10,
      "paddingRight": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <ModalImage
      aspectRatio={1.5}
      caption={
        Object {
          "credits": "Landscape credits",
          "text": "Landscape caption",
        }
      }
      onImagePress={null}
      uri="https://img/someImage"
    />
  </View>
  <View
    style={
      Object {
        "paddingTop": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingTop": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          testID={null}
        >
          Landscape caption
        </Text>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 9,
              "fontWeight": "400",
              "letterSpacing": 1,
              "lineHeight": 20,
              "marginTop": 0,
            }
          }
          testID={null}
        >
          LANDSCAPE CREDITS
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`2. inline image (portrait) with caption and credits 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "nowrap",
      "paddingBottom": 25,
      "paddingLeft": 10,
      "paddingRight": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <ModalImage
      aspectRatio={0.6666666666666666}
      caption={
        Object {
          "credits": "Portrait credits",
          "text": "Portrait caption",
        }
      }
      onImagePress={null}
      uri="https://img/someImage"
    />
  </View>
  <View
    style={
      Object {
        "paddingTop": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingTop": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          testID={null}
        >
          Portrait caption
        </Text>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 9,
              "fontWeight": "400",
              "letterSpacing": 1,
              "lineHeight": 20,
              "marginTop": 0,
            }
          }
          testID={null}
        >
          PORTRAIT CREDITS
        </Text>
      </View>
    </View>
  </View>
</View>
`;
